crates/ruff_python_parser/tests/snapshots/invalid_syntax@assert_empty_test.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/assert_empty_test.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..7,
        body: [
            Assert(
                StmtAssert {
                    node_index: NodeIndex(None),
                    range: 0..6,
                    test: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 6..6,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    msg: None,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | assert
  |       ^ Syntax Error: Expected an expression
  |
